More Kilna, More Alkin; Buzz
* There are now 91 objects in PJ2, not counting barycenters.
* Add Buzz, a ridiculous small asteroid satellite orbiting Armstrong in a 250km altitude orbit, well below the roche limit. It has biomes and a first pass at science balancing, though only placeholder science definitions.
* Kilna System Revamp:
    * Add Smeezobbler, Solin, Floryet, Whayt, and Hemantreeantbumbalo, all by Wolf-Rayet
    * Reduce Drae's mass to be more martian.
    * New Drae terrain pass by Mh.
    * Rearrange orbits for all objects in the Kilna system.
* New Alkin moon, Squangus, by Techo.
* Fix for timewarp altitude limits patch to make it work probably.
* Fix Weegletoss biome map in config.
* Fix syntax in Wolf-Rayet's asteroid science defs.
* Fix Garner's science definitions, which targeted the wrong biomes.
* Reduce maxLevel on Blitzo and Twilight.

--- a/GameData/PJ2/Career/ScienceBalancing.cfg
+++ b/GameData/PJ2/Career/ScienceBalancing.cfg
@@ -52,6 +52,21 @@
 			}
 		}
 	}
+	@Body[Buzz]
+	{
+		@Properties
+		{
+			!ScienceValues{}
+			ScienceValues
+			{
+				landedDataValue = 4
+				inSpaceLowDataValue = 2
+				inSpaceHighDataValue = 1.8
+				recoveryValue = 1.5
+				spaceAltitudeThreshold = 4000
+			}
+		}
+	}
 	@Body[Lu]
 	{
 		@Properties
