--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
@@ -13,9 +13,9 @@
 		Properties
 		{
 			displayName = Drae^N
-			description = A large planet with a thin atmosphere, barely cold enough to have liquid water on its surface. If it indeed had oceans they would be near boiling and the atmosphere saturated with water \n -Mh
-			radius = 592241
-			geeASL = 1.02
+			description = A small planet with a thin atmosphere, barely coolenough to have liquid water on its surface. If it indeed has oceans they are likely small and shallow, perhaps slowly boiling away \n -Mh
+			radius = 380500
+			geeASL = 0.48
 			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae_biomes.png
 			ScienceValues
             {
@@ -70,78 +70,74 @@
 		{
 			referenceBody = PJ2/Kilna
 			color = #796b58
-			semiMajorAxis = 78008300
+			semiMajorAxis = 90007472
 			eccentricity = 0
 			inclination = 2
 		}
 		Atmosphere				
 		{				
-			enabled =	True			
-			oxygen =	False			
-			altitude =	50000			
-			adiabaticIndex =	1.29			
-			atmosphereMolarMass =	0.04057			
-			temperatureSeaLevel =	331			
-			staticPressureASL =	20.265			
+			enabled = True			
+			oxygen = False			
+			altitude = 78000			
+			adiabaticIndex = 1.29			
+			atmosphereMolarMass = 0.04239			
+			temperatureSeaLevel = 339			
+			staticPressureASL =	30.3975			
 			temperatureCurve				
 			{				
-				key =	0	302	0.00000E+00	-5.94001E-04
-				key =	3367	300	-5.94001E-04	-1.23839E-03
-				key =	6597	296	-1.23839E-03	-1.28866E-03
-				key =	9701	292	-1.28866E-03	-2.01072E-03
-				key =	12685	286	-2.01072E-03	-2.78455E-03
-				key =	15558	278	-2.78455E-03	-3.24910E-03
-				key =	18328	269	-3.24910E-03	-3.73832E-03
-				key =	21003	259	-3.73832E-03	-3.47893E-03
-				key =	23590	250	-3.47893E-03	-3.58995E-03
-				key =	26097	241	-3.58995E-03	-3.28542E-03
-				key =	28532	233	-3.28542E-03	-3.37553E-03
-				key =	30902	225	-3.37553E-03	-3.02768E-03
-				key =	33214	218	-3.02768E-03	-2.65252E-03
-				key =	35476	212	-2.65252E-03	-2.70392E-03
-				key =	37695	206	-2.70392E-03	-2.28938E-03
-				key =	39879	201	-2.28938E-03	-1.86133E-03
-				key =	42028	197	-1.86133E-03	-1.88857E-03
-				key =	44146	193	-1.88857E-03	-1.91663E-03
-				key =	46233	189	-1.91663E-03	-1.45631E-03
-				key =	48293	186	-1.45631E-03	-1.17165E-03
-				key =	50000	184	-1.17165E-03	0.00000E+00
+				key =	0	312	0.00000E+00	-5.34188E-04
+				key =	5616	309	-5.34188E-04	-7.40192E-04
+				key =	11020	305	-7.40192E-04	-9.60984E-04
+				key =	16223	300	-9.60984E-04	-1.39609E-03
+				key =	21237	293	-1.39609E-03	-1.86027E-03
+				key =	26075	284	-1.86027E-03	-2.35445E-03
+				key =	30747	273	-2.35445E-03	-2.21337E-03
+				key =	35265	263	-2.21337E-03	-2.28415E-03
+				key =	39643	253	-2.28415E-03	-2.35405E-03
+				key =	43891	243	-2.35405E-03	-1.93705E-03
+				key =	48021	235	-1.93705E-03	-2.23602E-03
+				key =	52046	226	-2.23602E-03	-1.78072E-03
+				key =	55977	219	-1.78072E-03	-1.81865E-03
+				key =	59826	212	-1.81865E-03	-1.32345E-03
+				key =	63604	207	-1.32345E-03	-1.34409E-03
+				key =	67324	202	-1.34409E-03	-1.09051E-03
+				key =	70992	198	-1.09051E-03	-1.10589E-03
+				key =	74609	194	-1.10589E-03	-8.84695E-04
+				key =	78000	191	-8.84695E-04	0.00000E+00
 			}				
 			temperatureSunMultCurve				
 			{				
-				key =	0	1.000	0.00000E+00	-1.17315E-04
-				key =	3367	0.605	-1.17315E-04	-1.06502E-04
-				key =	6597	0.261	-1.06502E-04	-8.79510E-05
-				key =	9701	-0.012	-8.79510E-05	-6.30027E-05
-				key =	12685	-0.200	-6.30027E-05	-3.20223E-05
-				key =	15558	-0.292	-3.20223E-05	-1.44404E-06
-				key =	18328	-0.296	-1.44404E-06	8.22430E-06
-				key =	21003	-0.274	8.22430E-06	1.39157E-05
-				key =	23590	-0.238	1.39157E-05	1.87475E-05
-				key =	26097	-0.191	1.87475E-05	2.17659E-05
-				key =	28532	-0.138	2.17659E-05	2.40506E-05
-				key =	30902	-0.081	2.40506E-05	2.50865E-05
-				key =	33214	-0.023	2.50865E-05	2.47569E-05
-				key =	35476	0.033	2.47569E-05	2.43353E-05
-				key =	37695	0.087	2.43353E-05	2.24359E-05
-				key =	39879	0.136	2.24359E-05	2.00093E-05
-				key =	42028	0.179	2.00093E-05	1.65250E-05
-				key =	44146	0.214	1.65250E-05	1.24581E-05
-				key =	46233	0.240	1.24581E-05	7.28155E-06
-				key =	48293	0.255	7.28155E-06	2.34329E-06
-				key =	50000	0.259	2.34329E-06	0.00000E+00
+				key =	0	1.000	0.00000E+00	-7.49644E-05
+				key =	5616	0.579	-7.49644E-05	-6.71725E-05
+				key =	11020	0.216	-6.71725E-05	-5.36229E-05
+				key =	16223	-0.063	-5.36229E-05	-3.53012E-05
+				key =	21237	-0.240	-3.53012E-05	-1.24018E-05
+				key =	26075	-0.300	-1.24018E-05	2.99658E-06
+				key =	30747	-0.286	2.99658E-06	7.74679E-06
+				key =	35265	-0.251	7.74679E-06	1.14207E-05
+				key =	39643	-0.201	1.14207E-05	1.41243E-05
+				key =	43891	-0.141	1.41243E-05	1.57385E-05
+				key =	48021	-0.076	1.57385E-05	1.66460E-05
+				key =	52046	-0.009	1.66460E-05	1.67896E-05
+				key =	55977	0.057	1.67896E-05	1.58483E-05
+				key =	59826	0.118	1.58483E-05	1.42933E-05
+				key =	63604	0.172	1.42933E-05	1.23656E-05
+				key =	67324	0.218	1.23656E-05	9.26936E-06
+				key =	70992	0.252	9.26936E-06	6.08239E-06
+				key =	74609	0.274	6.08239E-06	2.06429E-06
+				key =	78000	0.281	2.06429E-06	0.00000E+00
 			}				
 			temperatureLatitudeBiasCurve				
 			{				
-				key =	0	12.93	0	0
-				key =	38	0	-0.6555	-0.6555
-				key =	90	-48.07	-1.0647	0
+				key =	0	11.87	0	0
+				key =	38	0	-0.6017	-0.6017
+				key =	90	-44.13	-0.9774	0
 			}				
 			temperatureLatitudeSunMultCurve				
 			{				
-				key =	0	68	0	0
-				key =	38	57.82	-0.5158	-0.5158
-				key =	90	20	-0.8378	0
+				key =	0	63	0	0
+				key =	38	53.46	-0.4835	-0.4835
+				key =	90	18	-0.7854	0
 			}				
 			temperatureAxialSunBiasCurve				
 			{				
@@ -165,31 +161,30 @@
 			}				
 			pressureCurve				
 			{				
-				key =	0	2.02650E+01	0.00000E+00	-3.39415E-03
-				key =	3367	1.13958E+01	-1.99219E-03	-1.99219E-03
-				key =	6597	6.40836E+00	-1.16829E-03	-1.16829E-03
-				key =	9701	3.60368E+00	-6.84424E-04	-6.84424E-04
-				key =	12685	2.02650E+00	-4.00486E-04	-4.00486E-04
-				key =	15558	1.13958E+00	-2.34028E-04	-2.34028E-04
-				key =	18328	6.40836E-01	-1.36550E-04	-1.36550E-04
-				key =	21003	3.60368E-01	-7.95394E-05	-7.95394E-05
-				key =	23590	2.02650E-01	-4.62453E-05	-4.62453E-05
-				key =	26097	1.13958E-01	-2.68331E-05	-2.68331E-05
-				key =	28532	6.40836E-02	-1.55353E-05	-1.55353E-05
-				key =	30902	3.60368E-02	-8.97305E-06	-8.97305E-06
-				key =	33214	2.02650E-02	-5.16976E-06	-5.16976E-06
-				key =	35476	1.13958E-02	-2.97063E-06	-2.97063E-06
-				key =	37695	6.40836E-03	-1.70046E-06	-1.70046E-06
-				key =	39879	3.60368E-03	-9.72402E-07	-9.72402E-07
-				key =	42028	2.02650E-03	-5.55732E-07	-5.55732E-07
-				key =	44146	1.13958E-03	-3.17376E-07	-3.17376E-07
-				key =	46233	6.40836E-04	-1.81100E-07	-1.81100E-07
-				key =	48293	3.60368E-04	-1.03240E-07	-1.03240E-07
-				key =	50000	0.00000E+00	0.00000E+00	0.00000E+00
+				key =	0	3.03975E+01	0.00000E+00	-3.05610E-03
+				key =	5616	1.70938E+01	-1.79410E-03	-1.79410E-03
+				key =	11020	9.61253E+00	-1.05241E-03	-1.05241E-03
+				key =	16223	5.40552E+00	-6.16768E-04	-6.16768E-04
+				key =	21237	3.03975E+00	-3.61064E-04	-3.61064E-04
+				key =	26075	1.70938E+00	-2.11108E-04	-2.11108E-04
+				key =	30747	9.61253E-01	-1.23256E-04	-1.23256E-04
+				key =	35265	5.40552E-01	-7.18487E-05	-7.18487E-05
+				key =	39643	3.03975E-01	-4.18077E-05	-4.18077E-05
+				key =	43891	1.70938E-01	-2.42796E-05	-2.42796E-05
+				key =	48021	9.61253E-02	-1.40700E-05	-1.40700E-05
+				key =	52046	5.40552E-02	-8.13473E-06	-8.13473E-06
+				key =	55977	3.03975E-02	-4.69149E-06	-4.69149E-06
+				key =	59826	1.70938E-02	-2.69856E-06	-2.69856E-06
+				key =	63604	9.61253E-03	-1.54774E-06	-1.54774E-06
+				key =	67324	5.40552E-03	-8.85387E-07	-8.85387E-07
+				key =	70992	3.03975E-03	-5.06223E-07	-5.06223E-07
+				key =	74609	1.70938E-03	-2.89251E-07	-2.89251E-07
+				key =	78000	0.00000E+00	0.00000E+00	0.00000E+00
 			}
 			AtmosphereFromGround
 			{
 				waveLength = 0.758668065,0.688461483,0.615384698,0
+				samples = 5
 			}
 		}
 		ScaledVersion
@@ -199,8 +194,8 @@
 			fadeEnd = 45000
 			OnDemand
 			{
-				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Drae_Scaled.dds
-				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Drae_normal.dds
+				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Drae_Scaled.png
+				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Drae_Normal.png
 			}
 			Material
 			{
@@ -219,12 +214,153 @@
                 }
 	        }
 		}
+		Ocean
+		{
+			ocean = True
+			oceanColor = 0.157692313,0.192307696,0.234615386,1
+			oceanHeight = 0
+			density = 1
+			minLevel = 2
+			maxLevel = 7
+			minDetailDistance = 8
+			maxQuadLengthsPerFrame = 0.03
+			Material
+			{
+				color = 0.157692313,0.192307696,0.234615386,1
+				colorFromSpace = 0.157692313,0.192307696,0.234615386,1
+				specColor = 1,1,1,1
+				shininess = 0.697751
+				gloss = 0.2
+				tiling = 1000
+				waterTex = BUILTIN/sea-water1
+				waterTexScale = 1,1
+				waterTexOffset = 0,0
+				waterTex1 = BUILTIN/sea-water2
+				waterTex1Scale = 1,1
+				waterTex1Offset = 0,0
+				bTiling = 800
+				bumpMap = BUILTIN/quiet
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				displacement = 0.05
+				texDisplacement = -0.31
+				dispFreq = 0.15
+				mix = 0.3677657
+				oceanOpacity = 0.5
+				falloffPower = 1.1
+				falloffExp = 2
+				fogColor = 0.917910457,0.917910457,1,1
+				heightFallOff = 0.2
+				globalDensity = -8E-06
+				atmosphereDepth = 70000
+				fogColorRamp = BUILTIN/AerialRampKerbin2
+				fogColorRampScale = 1,1
+				fogColorRampOffset = 0,0
+				fadeStart = 20000
+				fadeEnd = 60000
+				planetOpacity = 1
+				normalXYFudge = 1.4
+				normalZFudge = 1.18
+			}
+			FallbackMaterial
+			{
+				color = 0.494117647,0.552941203,0.627451003,1
+				colorFromSpace = 0.0509803928,0.164705887,0.215686277,1
+				specColor = 1,1,1,1
+				shininess = 1
+				gloss = 0.4327519
+				tiling = 1000
+				waterTex = BUILTIN/sea-water2
+				waterTexScale = 1,1
+				waterTexOffset = 0,0
+				waterTex1 = BUILTIN/sea-water3
+				waterTex1Scale = 1,1
+				waterTex1Offset = 0,0
+				fadeStart = 20000
+				fadeEnd = 60000
+				planetOpacity = 0
+			}
+			Fog
+			{
+				afgAltMult = 0.05
+				afgBase = 0.6
+				afgLerp = False
+				afgMin = 0.05
+				fogColorEnd = 0,0.0850000009,0.122500002,1
+				fogColorStart = 0,0.340000004,0.49000001,1
+				fogDensityAltScalar = -0.0008
+				fogDensityEnd = 0.025
+				fogDensityExponent = 1
+				fogDensityPQSMult = 0.02
+				fogDensityStart = 0.005
+				skyColorMult = 1.1
+				skyColorOpacityAltMult = 15
+				skyColorOpacityBase = 0.25
+				sunAltMult = 0.01
+				sunBase = 0.5
+				sunMin = 0.05
+				useFog = True
+			}
+			Mods
+			{
+				AerialPerspectiveMaterial
+				{
+					atmosphereDepth = 5000
+					DEBUG_SetEveryFrame = False
+					globalDensity = -7.5E-06
+					heightFalloff = 0.2
+					oceanDepth = 0
+					order = 100
+					enabled = True
+					name = _Material_AerialPerspective
+				}
+				RemoveQuadMap
+				{
+					map = BUILTIN/kerbin_height_new
+					deformity = 0
+					maxHeight = 0.1
+					minHeight = 0
+					order = 100
+					enabled = False
+					name = QuadRemoveMap
+				}
+				OceanFX
+				{
+					angle = 0
+					blendA = 0
+					blendB = 0
+					framesPerSecond = 10
+					oceanOpacity = 0
+					spaceAltitude = 0
+					spaceSurfaceBlend = 0
+					specColor = 0,0,0,0
+					texBlend = 0.857872
+					txIndex = -2147483648
+					order = 100
+					enabled = True
+					name = OceanFX
+					Watermain
+					{
+						value = BUILTIN/sea-water1
+						value = BUILTIN/sea-water2
+						value = BUILTIN/sea-water3
+						value = BUILTIN/sea-water4
+						value = BUILTIN/sea-water5
+						value = BUILTIN/sea-water6
+						value = BUILTIN/sea-water7
+						value = BUILTIN/sea-water8
+						value = BUILTIN/sea-water1
+					}
+				}
+			}
+		}
 		PQS
 		{
 			materialType = AtmosphericTriplanarZoomRotation
 			fadeStart = 45000
 			fadeEnd = 60000
 			deactivateAltitude = 65000
+			maxLevel = 7
 			Material
 			{
 				factor = 10
@@ -275,8 +411,8 @@
 			{
 				VertexHeightMap
 				{
-					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Draeheight.png
-					offset = -1550
+					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Draeheightnew.png
+					offset = -1000
 					deformity = 13000
 					scaleDeformityByRadius = False
 					order = 1
@@ -285,7 +421,7 @@
 				}
 				VertexSimplexHeight
 				{
-					deformity = 500
+					deformity = 200
 					frequency = 12
 					octaves = 4
 					persistence = 0.6
@@ -296,7 +432,7 @@
 				}
 				VertexHeightNoiseVertHeightCurve2
 				{
-					deformity = 400
+					deformity = 200
 					ridgedAddFrequency = 25
 					ridgedAddLacunarity = 2
 					ridgedAddOctaves = 4
@@ -326,6 +462,8 @@
 				{
 					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Drae_color.png
 					order = 3
+					enabled = True
+					name = VertexColorMap
 				}
 			}
 		}
