--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/ScienceDefs/WolfRayet/ScienceDefs.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/ScienceDefs/WolfRayet/ScienceDefs.cfg
@@ -71,6 +71,7 @@
 		Body
 		{
 			name = PJ2/Ast_Naharosmank //Naharosmank
+			Values
 			{
 				InSpaceLow = Looking around is a calculated risk you feel, on the way here a micrometeorite hit the spacecraft, ultimately harmlessly, but you feel the visor of your spacesuit would not be so sturdy.
 				InSpaceHigh = Looking around is a calculated risk you feel, on the way here a micrometeorite hit the spacecraft, ultimately harmlessly, but you feel the visor of your spacesuit would not be so sturdy.
@@ -137,6 +138,7 @@
 		Body
 		{
 			name = PJ2/Ast_Naharosmank //Naharosmank
+			Values
 			{
 				SrfLandedGeneric = Naharosmank has a very stony composition, it's all sillicates without the faintest indication of metal or volatiles here.
 				SrfLandedPuzzle = This region its hard to distinguish compositionally from the rest of the asteroid, although, there are some indications of heavier elements in the dust here, vague hints of shiny metal deposits as you dig deeper. It's almost like you're looking deeper into Naharosmank, but you're right on the surface. Unless, a part of Naharosmank broke off here... but where would it have gone?
@@ -148,6 +150,7 @@
 		Body
 		{
 			name = PJ2/Ast_Welkendon //Welkendon
+			Values
 			{
 				SrfLandedGeneric = Welkendon has a very stony composition, it's all sillicates without the faintest indication of metal or volatiles here.
 				SrfLandedPuzzle = This region its hard to distinguish compositionally from the rest of the asteroid, although, there are some indications of heavier elements in the dust here, vague hints of shiny metal deposits as you dig deeper. It's almost like you're looking deeper into Welkendon, but you're right on the surface. Unless, a part of Welkendon broke off here... but where would it have gone?
@@ -191,6 +194,7 @@
 		Body
 		{
 			name = PJ2/Ast_Naharosmank //Naharosmank
+			Values
 			{
 				InSpaceHigh = While not the hottest asteroid, Naharosmank is still far from habitable temperatures even when it's furthest from Pyri.
 				InSpaceLow = While not the hottest asteroid, Naharosmank is still far from habitable temperatures even when it's furthest from Pyri.
@@ -204,6 +208,7 @@
 		Body
 		{
 			name = PJ2/Ast_Welkendon //Welkendon
+			Values
 			{
 				InSpaceHigh = While not the hottest asteroid, Welkendon is still far from habitable temperatures even when it's furthest from Pyri.
 				InSpaceLow = While not the hottest asteroid, Welkendon is still far from habitable temperatures even when it's furthest from Pyri.
@@ -217,6 +222,7 @@
 		Body
 		{
 			name = PJ2/Ast_Schmev //Schmev
+			Values
 			{
 				InSpaceHigh = The weather around Schmev is feeling absolutely Schmevoulous today. It's bad.
 				InSpaceLow = The weather around Schmev is feeling absolutely Schmevoulous today. Yeah. It's that bad.
@@ -233,6 +239,7 @@
 		Body
 		{
 			name = PJ2/Ast_Gershmurzelen //Gershmurzelen
+			Values
 			{
 				InSpaceHigh = The temperatures here would have a Kerbal sizzling like morning bacon, meaning Gershmurzelen is living up to expectations.
 				InSpaceLow =  The temperatures here would have a Kerbal sizzling like morning bacon, meaning Gershmurzelen is living up to expectations.
@@ -250,6 +257,7 @@
 		Body
 		{
 			name = PJ2/Ast_Naharosmank //Naharosmank
+			Values
 			{
 				InSpaceHigh = There is no air around Naharosmank.
 				InSpaceLow = There is no air around Naharosmank.
@@ -259,6 +267,7 @@
 		Body
 		{
 			name = PJ2/Ast_Welkendon //Welkendon
+			Values
 			{
 				InSpaceHigh = There is no air around Welkendon.
 				InSpaceLow = There is no air around Welkendon.
@@ -268,6 +277,7 @@
 		Body
 		{
 			name = PJ2/Ast_Schmev //Schmev
+			Values
 			{
 				InSpaceHigh = Schmev may be a large asteroid, but it's no where near large enough to host an atmosphere.
 				InSpaceHigh = Schmev may be a large asteroid, but it's no where near large enough to host an atmosphere. What's that reading then you may be asking? That reading is zero. Nothing here.
@@ -277,6 +287,7 @@
 		Body
 		{
 			name = PJ2/Ast_Gershmurzelen //Gershmurzelen
+			Values
 			{
 				InSpaceHigh = Air would probably have a hard time staying on the ground with how fast Gershmurzelen rotates.
 				InSpaceLow = Air would probably have a hard time staying on the ground with how fast Gershmurzelen rotates.
@@ -292,6 +303,7 @@
 		Body
 		{
 			name = PJ2/Ast_Naharosmank //Naharosmank
+			Values
 			{
 				InSpaceHigh = No magnetic field is detected around Naharosmank.
 				InSpaceLow = No magnetic field is detected around Naharosmank.
@@ -300,6 +312,7 @@
 		Body
 		{
 			name = PJ2/Ast_Welkendon //Welkendon
+			Values
 			{
 				InSpaceHigh = No magnetic field is detected around Welkendon.
 				InSpaceLow = No magnetic field is detected around Welkendon.
@@ -308,6 +321,7 @@
 		Body
 		{
 			name = PJ2/Ast_Schmev //Schmev
+			Values
 			{
 				InSpaceHigh = Schmev doesn't host a magnetic field, but the field lines of Pyri show that Schmev is fully differentiated, with a metallic core, mantle, and crust, not unlike Armstrong. Maybe Schmev should be considered a full planet?
 				InSpaceLow = Some very weak local magnetic fields are detected originating from Schmev's crust, especially around its large impact basins. it's not the dynamo of Armstrong by a longshot, but it's something!
@@ -316,6 +330,7 @@
 		Body
 		{
 			name = PJ2/Ast_Gershmurzelen //Gershmurzelen
+			Values
 			{
 				InSpaceHigh = There is no magnetic field around Gershmurzelen... though the way Pyri's field interacts with this asteroid suggests some amount of differentiation, but suggests Gershmurzelen has only one pseudocore, which is not consistent with prearrival contact-binary models. Something's wrong in the textbooks!
 				InSpaceLow = While there is no magnetic field, along the terminator there are some amount of small, localized electric discharges occuring on the surface below.
@@ -330,6 +345,7 @@
 		Body
 		{
 			name = PJ2/Ast_Naharosmank //Naharosmank
+			Values
 			{
 				SrfLanded = Naharosmank is geologically dead, though long enough observation times may allow you to detect impact events.
 			}
@@ -337,6 +353,7 @@
 		Body
 		{
 			name = PJ2/Ast_Welkendon //Welkendon
+			Values
 			{
 				SrfLanded = After a bit of monitoring, an imapct event is detected! One can't help but wonder if there will come a time when only large asteroids remain in the Arriprit Belt, with small rocks meeting their fate in impact events.
 			}
@@ -344,6 +361,7 @@
 		Body
 		{
 			name = PJ2/Ast_Schmev //Schmev
+			Values
 			{
 				SrfLanded = Not much was expected to be found, but Schmev seems to experience some amount of genuine quaking! This is likely tidal flexing by Pyri as Schmev travels on its eccentric orbit.
 			}
@@ -351,6 +369,7 @@
 		Body
 		{
 			name = PJ2/Ast_Gershmurzelen //Gershmurzelen
+			Values
 			{
 				SrfLanded = Gershmurzelen actually seems to experience a strange amount of seismic activity. It's not much, but it doesn't strongly correlate with tides either. Could Gershmurzelen's rapid rotation be causing it to fracture?
 			}
@@ -364,6 +383,7 @@
 		Body
 		{
 			name = PJ2/Ast_Naharosmank //Naharosmank
+			Values
 			{
 				InSpaceHigh = The goo dies. Yeah, who would've seen that coming, huh? What? You want us to go into detail? You want us to tell you how the vacuum of space is dangerous in vivid detail? Disgusting.
 				InSpaceLow = The goo dies. Yeah, who would've seen that coming, huh? What? You want us to go into detail? You want us to tell you how the vacuum of space is dangerous in vivid detail? Disgusting.
@@ -374,6 +394,7 @@
 		Body
 		{
 			name = PJ2/Ast_Welkendon //Welkendon
+			Values
 			{
 				InSpaceHigh = The goo begins to boil, and in an attempt to form itself a cyst, it ends up only trapping even more heat, it fizzes and pops, creating a great mess of the inside of the container as it... what's wrong? Oh, sorry, too much. Needless to say, the vacuum of space is dangerous.
 				InSpaceLow = The goo begins to boil, and in an attempt to form itself a cyst, it ends up only trapping even more heat, it fizzes and pops, creating a great mess of the inside of the container as it... what's wrong? Oh, sorry, too much. Needless to say, the vacuum of space is dangerous.
@@ -383,6 +404,7 @@
 		Body
 		{
 			name = PJ2/Ast_Schmev //Schmev
+			Values
 			{
 				InSpaceHigh = The goo almost seems to be the same color as Schmev from some angles, actually it's quite a lot of colors.
 				InSpaceLow =  The goo almost seems to be the same color as Schmev from some angles, actually it's quite a lot of colors.
@@ -395,6 +417,7 @@
 		Body
 		{
 			name = PJ2/Ast_Gershmurzelen //Gershmurzelen
+			Values
 			{
 				InSpaceHigh = The goo is enthralled by this world, it almost seems to mimick Gershmurzelen's rotation.
 				InSpaceLow = The goo is enthralled by this world, it almost seems to mimick Gershmurzelen's rotation.
