--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/ScienceDefs/WolfRayet/ScienceDefsGarnerMorhomlo.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/ScienceDefs/WolfRayet/ScienceDefsGarnerMorhomlo.cfg
@@ -67,11 +67,11 @@
 				SrfLandedNSouthFlat = You kneel down, as best you can, and clear the dust aside with your palm. You take your fist and knock against the exposed solid surface. It'll be difficult to sample this.
 
 				//Antipyrian
-				SrfLandedAHighlands = You gaze at the sky, trying to spot one of the resident asteroids of the innermost Pyri System. You look very, very carefully.
-				SrfLandedALowlands = Setting EVA suit cooling systems to maximum, it's a very sunny... always on this part of Garner.
+				SrfLandedHighlands = You gaze at the sky, trying to spot one of the resident asteroids of the innermost Pyri System. You look very, very carefully.
+				SrfLandedLowlands = Setting EVA suit cooling systems to maximum, it's a very sunny... always on this part of Garner.
 
-				SrfLandedHighlands = You gaze at the sky, and then immediently level your head again after catching an accidental glance at Pyri. Even with the visor down, that hurt.
-				SrfLandedLowlands = Setting EVA suit heating systems to maximum, it's very chilly night on Garner, and day isn't much better.
+				SrfLandedAHighlands = You gaze at the sky, and then immediently level your head again after catching an accidental glance at Pyri. Even with the visor down, that hurt.
+				SrfLandedALowlands = Setting EVA suit heating systems to maximum, it's very chilly night on Garner, and day isn't much better.
 
 
 				SrfLandedCrater = You can't seem to find good footing, the crater floor is slick and devoid of dust that would at least provide some amount of traction.
@@ -117,11 +117,11 @@
 				SrfLandedNSouthFlat = You find an are where the glassy surface has fractured, and manage to remove a naturally cut chunk from the surface with help from your tools. Determining what caused the glass flat to crack, and when, may reveal the age of flats by comparing to the expected rate of expansion due to cooling.
 
 				//Antipyrian
-				SrfLandedAHighlands = There are many pebbles and dust here, it's like a candy store of various geologic clues. You shovel as many different stones as you can into a baggie. Some are volcanic, some are silicate, and some are impact ejecta. Many things to learn.
-				SrfLandedALowlands = There are some extremely trace amounts of ice and other volatiles among the regolith and dust, certainly delivered by impacts from the outer system. Though the extreme scarcity of volatiles demonstrates the difficulty small icy meteors have in entering the inner system.
+				SrfLandedHighlands = There are many pebbles and dust here, it's like a candy store of various geologic clues. You shovel as many different stones as you can into a baggie. Some are volcanic, some are silicate, and some are impact ejecta. Many things to learn.
+				SrfLandedLowlands = There are some extremely trace amounts of ice and other volatiles among the regolith and dust, certainly delivered by impacts from the outer system. Though the extreme scarcity of volatiles demonstrates the difficulty small icy meteors have in entering the inner system.
 
-				SrfLandedHighlands = The rubbly highlands are mainly rocky material, with fairly little dust. It's likely any fine powder gets blown away by Pyri.
-				SrfLandedLowlands = There are lots of igenous materials to sample here. Despite a lot of the evidence of Garner's volcanic processes that defined the nature of the Antipyrian Hemisphere being lost to time, the rocks themselves still hold pages of the story. Seems Garner's volcanism was definitively global.
+				SrfLandedAHighlands = The rubbly highlands are mainly rocky material, with fairly little dust. It's likely any fine powder gets blown away by Pyri.
+				SrfLandedALowlands = There are lots of igenous materials to sample here. Despite a lot of the evidence of Garner's volcanic processes that defined the nature of the Antipyrian Hemisphere being lost to time, the rocks themselves still hold pages of the story. Seems Garner's volcanism was definitively global.
 
 				SrfLandedCrater = The glassy surface of this crater almost mirrors that of the flats, however this crater floor is impact melt, and unlikely to be otherwise volcanic. In fact large impacts like this were probably responsible for Garner losing heat faster.
 				SrfLandedPolarCrater = You pick up a piece of impact brecca and notice a unit within it is a distinct red-ish color, setting it apart from the rest of the sample. Later analysis will find this is the piece of the planetoid that made this basin. A glimpse into a world now entirely lost. Or, perhaps, not entirely.
