--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/2_Blitzø.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/2_Blitzø.cfg
@@ -59,8 +59,8 @@
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 5600
-			fadeEnd = 5700
+			//fadeStart = 5600
+			//fadeEnd = 5700
 			Material
 			{
 				
@@ -75,10 +75,10 @@
 		PQS
 		{
 			minLevel = 2
-			maxLevel = 5
-			fadeStart = 5700
-			fadeEnd = 5800
-			deactivateAltitude = 5900
+			maxLevel = 4
+			//fadeStart = 5700
+			//fadeEnd = 5800
+			//deactivateAltitude = 5900
 			Mods
 			{
 				VertexColorMap
