--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/5_Twilight.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/5_Twilight.cfg
@@ -59,8 +59,8 @@
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 6900
-			fadeEnd = 7400
+			//fadeStart = 6900
+			//fadeEnd = 7400
 			OnDemand
 			{
 				texture = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/PluginData/Twilight_color.dds
@@ -69,11 +69,11 @@
 		}
 		PQS
 		{
-			minLevel = 2
-			maxLevel = 6
-			fadeStart = 7000
-			fadeEnd = 7500
-			deactivateAltitude = 7600
+			minLevel = 1
+			maxLevel = 2
+			//fadeStart = 7000
+			//fadeEnd = 7500
+			//deactivateAltitude = 7600
 			Mods
 			{
 				VertexColorMap
