--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Kilna.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Kilna.cfg
@@ -12,13 +12,14 @@
 		{
 			displayName = Kilna^N
 			description = Kilna is a warm gas giant planet and the second around Ilio AB. Its high albedo is presumably due to being completely shrouded by water clouds \n -Orios and Mh
+			rotationPeriod = 9369
 			radius = 6502415
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
 			@mass *= 258
 			ScienceValues
-            {
-            }
+           	 {
+            	}
 		}
 		Orbit
 		{
@@ -34,6 +35,22 @@
 			argumentOfPeriapsis = 54
 			meanAnomalyAtEpochD = 50
 			inclination = 0.53
+		}
+		Rings
+		{
+			Ring
+			{
+				angle = 0
+				innerRadius = 1800
+				outerRadius = 2000
+				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Kilna_Rings.dds
+				color = 1,1,1,1
+				unlit = false
+				lockRotation = true
+				useNewShader = true
+				penumbraMultiplier = 8
+				steps = 1000
+			}
 		}
 		Atmosphere				
 		{				
