--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/ScienceDefs/StockDefs/ScienceDefs.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/ScienceDefs/StockDefs/ScienceDefs.cfg
@@ -102,6 +102,7 @@
 {
 	@RESULTS
 	{
+
 		Body
 		{
 			name = PJ2/Armstrong
@@ -280,6 +281,7 @@
 {
 	@RESULTS
 	{
+		Buzz = The instrument is reading a gravioli count which is over one hundred times too high according to established physics. You're not sure what this thing is, but it's not an asteroid, that's for sure.
 		Body
 		{
 			name = PJ2/Armstrong
