Scatterer support for the Kilna and Alkin Systems
* Scatterer compatibility for Alkin, Kilna, Drae, Whayt, Ulen, and Ilmar.
    * Still need to sort out the loadDistance and unloadDistance though.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ulen.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ulen.cfg
@@ -290,16 +290,16 @@
 		}
 		Ocean
 		{
-			oceanColor = 0.507692397,0.33846131,0.203846246,1
+			oceanColor = RGBA(158,49,29,255)
 			Material
 			{
-				color = 1.20000005,0.530769348,0.280769348,1
-				colorFromSpace = 0.507692397,0.33846131,0.203846246,1
+				color = RGBA(158,49,29,255)
+				colorFromSpace = RGBA(87,19,16,255)
 			}
 			FallbackMaterial
 			{
-				color = 1.20000005,0.530769348,0.280769348,1
-				colorFromSpace = 0.507692397,0.33846131,0.203846246,1
+				color = RGBA(158,49,29,255)
+				colorFromSpace = RGBA(87,19,16,255)
 			}
 	}
 }
